log
Sat Mar 25 18:18:47 -03 2023: 
 list.c | 7 ++++++-
 1 file changed, 6 insertions(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
f3de3e5
Sat Mar 25 18:19:26 -03 2023: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
8ad5038
Sat Mar 25 18:21:20 -03 2023: 
 list.c | 8 +++++++-
 1 file changed, 7 insertions(+), 1 deletion(-)
In file included from test.c:5:
./list.c:48:1: error: non-void function does not return a value in all control paths [-Werror,-Wreturn-type]
}
^
1 error generated.
Compilation failed
c3e24a8
Sat Mar 25 18:22:35 -03 2023: 
 list.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  2|5
total_score: 15/70
fe67dd8
Sat Mar 25 18:32:18 -03 2023: 
 list.c | 14 +++++++++++---
 1 file changed, 11 insertions(+), 3 deletions(-)
 tests:  0|0
c8fb488
Sat Mar 25 18:34:08 -03 2023: 
 list.c | 6 ------
 1 file changed, 6 deletions(-)
In file included from test.c:5:
./list.c:55:1: error: non-void function does not return a value [-Werror,-Wreturn-type]
}
^
1 error generated.
Compilation failed
0ae152e
Sat Mar 25 18:34:23 -03 2023: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|5
total_score: 15/70
bb0bf6a
Sat Mar 25 18:35:46 -03 2023: 
 list.c | 10 ++++++++++
 1 file changed, 10 insertions(+)
 tests:  0|0
ad9338e
Sat Mar 25 18:37:24 -03 2023: 
 list.c | 8 ++------
 1 file changed, 2 insertions(+), 6 deletions(-)
 tests:  5|4
total_score: 25/70
382945e
Sat Mar 25 18:38:26 -03 2023: 
 list.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  0|0
e3189e8
